; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/mips/kernel/extr_irq-gt641xx.c_gt641xx_irq_dispatch.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/mips/kernel/extr_irq-gt641xx.c_gt641xx_irq_dispatch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GT_INTRCAUSE_OFS = common dso_local global i32 0, align 4
@GT_INTRMASK_OFS = common dso_local global i32 0, align 4
@GT641XX_IRQ_BASE = common dso_local global i64 0, align 8
@irq_err_count = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gt641xx_irq_dispatch() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = load i32, i32* @GT_INTRCAUSE_OFS, align 4
  %5 = call i32 @GT_READ(i32 %4)
  store i32 %5, i32* %1, align 4
  %6 = load i32, i32* @GT_INTRMASK_OFS, align 4
  %7 = call i32 @GT_READ(i32 %6)
  store i32 %7, i32* %2, align 4
  %8 = load i32, i32* %2, align 4
  %9 = load i32, i32* %1, align 4
  %10 = and i32 %9, %8
  store i32 %10, i32* %1, align 4
  store i32 1, i32* %3, align 4
  br label %11

11:                                               ; preds = %27, %0
  %12 = load i32, i32* %3, align 4
  %13 = icmp slt i32 %12, 30
  br i1 %13, label %14, label %30

14:                                               ; preds = %11
  %15 = load i32, i32* %1, align 4
  %16 = load i32, i32* %3, align 4
  %17 = shl i32 1, %16
  %18 = and i32 %15, %17
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %26

20:                                               ; preds = %14
  %21 = load i64, i64* @GT641XX_IRQ_BASE, align 8
  %22 = load i32, i32* %3, align 4
  %23 = sext i32 %22 to i64
  %24 = add nsw i64 %21, %23
  %25 = call i32 @do_IRQ(i64 %24)
  br label %32

26:                                               ; preds = %14
  br label %27

27:                                               ; preds = %26
  %28 = load i32, i32* %3, align 4
  %29 = add nsw i32 %28, 1
  store i32 %29, i32* %3, align 4
  br label %11

30:                                               ; preds = %11
  %31 = call i32 @atomic_inc(i32* @irq_err_count)
  br label %32

32:                                               ; preds = %30, %20
  ret void
}

declare dso_local i32 @GT_READ(i32) #1

declare dso_local i32 @do_IRQ(i64) #1

declare dso_local i32 @atomic_inc(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
